--- a/dev/A/index.html
+++ b/dev/A/index.html
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>index {{lang}}</title>
+  <title>index A</title>
 </head>
 
 <body>
   <div id="app">
-    <p class="lead">{{json myObj}}
+    <p class="lead">{&quot;value1&quot;:&quot;aaaaa&quot;,&quot;value2&quot;:&quot;bbbbb&quot;}
       <br>
       This is a simple hero unit, a simple jumbotron-style component for calling
       extra attention to featured content or information.</p>
