implement node http server

--- a/dev/A/index.html
+++ b/dev/A/index.html
@@ -11,6 +11,7 @@
       <br>
       This is a simple hero unit, a simple jumbotron-style component for calling
       extra attention to featured content or information.</p>
+      <img src="/assets/img/flags32/A.png" alt="" />
     </div>
   </body>
 
